# Skin-Cancer-Detection

./: Home.py  README.md  pyproject.toml  requirements.txt
model/: model.keras  notebook.ipynb
pages/: 2_Analyze.py  2_Demo.py  3_Contact.py  3_Locate.py  4_Articles.py  4_Info.py
